--- a/Composer/Assets/en.lproj/Localizable.strings
+++ b/Composer/Assets/en.lproj/Localizable.strings
@@ -1,3 +1,3 @@
-"composer.textview.placeholder" = "Type a message";
+"composer.textview.placeholder" = "Write a message...";
 "composer.editingview.title" = "Editing Message";
 "composer.recordaudioview.swipe" = "Swipe to cancel";
